# bevy_forest_scene

./: Cargo.toml  README.md
assets/: fir_tree_stylized.glb  foam.wgsl  scene_config.scn.ron  terrain.wgsl  terrain_config.scn.ron  water_material.wgsl
assets/forest_ground/: forest_ground_04_4k.gltf
assets/rock_wall/: rock_wall_02_4k.gltf
src/: camera_controller.rs  main.rs  plane.rs  terrain.rs  water.rs
