[package]
name = "bevy_forest_scene"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false, features = [
    "bevy_gltf",
    "bevy_pbr",
    "jpeg",
    "png",
    "sysinfo_plugin",
    "bevy_winit",
    "tonemapping_luts",
    "multi_threaded",
] }
noise = "0.9.0"
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3
debug = 0
strip = "debuginfo"

[profile.dev]
opt-level = 1
debug = 0
strip = "debuginfo"
